--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,9 @@
 language: php
-
 php:
   - 5.6
   - nightly
   - hhvm
-
-before_script:
-  - composer install
-
+before_script: composer install
 script:
   - vendor/bin/phpunit
   - vendor/bin/phpcs --standard=PSR2 src/ tests/
