--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "~4.5",
-        "squizlabs/php_codesniffer": "2.2",
-        "sami/sami": "3.0.2",
-        "phine/sami-github": "1.0.4"
+        "squizlabs/php_codesniffer": "~2.3",
+        "sami/sami": "~3.0",
+        "phine/sami-github": "~1.0"
     }
 }
