--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,4 @@ before_script: composer install
 script:
   - vendor/bin/phpunit
   - vendor/bin/phpcs --standard=PSR2 src/ tests/
+after_script: php vendor/bin/coveralls -v
