--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "phpunit/phpunit": "~4.5",
         "squizlabs/php_codesniffer": "~2.3",
         "sami/sami": "~3.0",
-        "phine/sami-github": "~1.0"
+        "phine/sami-github": "~1.0",
+        "satooshi/php-coveralls": "0.6.1"
     }
 }
