--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
         "psr-4": { "Shrink0r\\Monatic\\Tests\\": "tests/unit/" }
     },
     "require": {
-        "symfony/property-access": "2.6.5"
+        "symfony/property-access": "~2.7"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.5",
+        "phpunit/phpunit": "~4.8",
         "squizlabs/php_codesniffer": "~2.3",
         "sami/sami": "~3.0",
         "phine/sami-github": "~1.0",
-        "satooshi/php-coveralls": "0.6.1"
+        "satooshi/php-coveralls": "~0.6"
     }
 }
