reorganized project layout

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,40 @@
+# project related stuff
+/bin/phpunit
+/build/
+
+# composer related stuff
+/vendor/
+/composer.lock
 composer.phar
-vendor/
-build/
+
+# other dependency tools
+node_modules
+components
+bower_components
+
+# general os and editors related stuff
+.DS_Store
+Thumbs.db
+*.sublime-project
+*.sublime-workspace
+.bundle/
+*~
+*.tmp
+*.bak
+*.swp
+*~.nib
+.class
+.classpath
+.settings/
+.loadpath
+.project
+.metadata
+*.launch
+.buildpath
+.cproject
+.externalToolBuilders/
+.plugins/
+*.pydevproject
+nbproject/
+*.tmproj
+
