--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -12,7 +12,7 @@
 >
     <testsuites>
         <testsuite name="All Tests">
-            <directory>tests/unit/</directory>
+            <directory>tests/</directory>
         </testsuite>
     </testsuites>
 
