--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,15 @@
 root = true
 
 [*]
-end_of_line = LF
 indent_style = space
 indent_size = 4
+end_of_line = lf
+charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
 
+[*.yml]
+indent_size = 2
+
+[*.md]
+trim_trailing_whitespace = false
