travisCI for php 7.2-7.4; fix mess-detection stuff
remove superfluous php linting etc, upgrade phpunit xml etc.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,7 +10,6 @@
     convertWarningsToExceptions = "true"
     processIsolation            = "false"
     stopOnFailure               = "false"
-    syntaxCheck                 = "true"
     bootstrap                   = "vendor/autoload.php"
 >
     <testsuites>
@@ -21,23 +20,8 @@
     </testsuites>
 
     <logging>
-        <log type="coverage-html" target="build/coverage" title="monatic - coverage" charset="UTF-8" yui="true" highlight="true" lowUpperBound="35" highLowerBound="70"/>
+        <log type="coverage-html" target="build/coverage" lowUpperBound="35" highLowerBound="70"/>
         <log type="coverage-clover" target="build/logs/clover.xml"/>
-        <pmd>
-            <rule class="PHPUnit_Util_Log_PMD_Rule_Project_CRAP" threshold="5,30"/>
-            <rule class="PHPUnit_Util_Log_PMD_Rule_Class_DepthOfInheritanceTree" threshold="6"/>
-            <rule class="PHPUnit_Util_Log_PMD_Rule_Class_EfferentCoupling" threshold="20"/>
-            <rule class="PHPUnit_Util_Log_PMD_Rule_Class_ExcessiveClassLength" threshold="500"/>
-            <rule class="PHPUnit_Util_Log_PMD_Rule_Class_ExcessivePublicCount" threshold="20"/>
-            <rule class="PHPUnit_Util_Log_PMD_Rule_Class_TooManyFields" threshold="15"/>
-            <rule class="PHPUnit_Util_Log_PMD_Rule_Class_TooManyMethods" threshold="20"/>
-            <rule class="PHPUnit_Util_Log_PMD_Rule_Function_CodeCoverage" threshold="35,70"/>
-            <rule class="PHPUnit_Util_Log_PMD_Rule_Function_CRAP" threshold="30"/>
-            <rule class="PHPUnit_Util_Log_PMD_Rule_Function_CyclomaticComplexity" threshold="20"/>
-            <rule class="PHPUnit_Util_Log_PMD_Rule_Function_ExcessiveMethodLength" threshold="100"/>
-            <rule class="PHPUnit_Util_Log_PMD_Rule_Function_ExcessiveParameterList" threshold="10"/>
-            <rule class="PHPUnit_Util_Log_PMD_Rule_Function_NPathComplexity" threshold="200"/>
-        </pmd>
     </logging>
     <filter>
         <whitelist>
