--- a/composer.json
+++ b/composer.json
@@ -4,19 +4,16 @@
     "description": "Fiddling with the monad concept in php",
     "keywords": [ "monad" ],
     "require": {
-        "php": ">=5.6.0",
-        "symfony/property-access": "~3.1"
+        "php": "^7.0",
+        "symfony/property-access": "^4.0 || ^5.0"
     },
     "require-dev": {
-        "sami/sami": "^3.3.0",
-        "jakub-onderka/php-console-highlighter": "^0.3",
-        "jakub-onderka/php-parallel-lint": "^0.9",
-        "phploc/phploc": "^3.0",
-        "phpmd/phpmd": "^2.4",
-        "phpunit/phpunit": "^5.5",
-        "satooshi/php-coveralls": "master@dev",
-        "sebastian/phpcpd": "^2.0",
-        "squizlabs/php_codesniffer": "^2.6"
+        "roave/security-advisories": "dev-master",
+        "phploc/phploc": "^5.0 || ^6.0",
+        "phpmd/phpmd": "^2.8",
+        "phpunit/phpunit": "^5.5 || ^6.0 || ^7.0",
+        "php-coveralls/php-coveralls": "^2.2",
+        "squizlabs/php_codesniffer": "^2.7"
     },
     "autoload": {
         "psr-4": {
@@ -37,38 +34,25 @@
     },
     "scripts": {
         "test": [
-            "@php-lint",
             "@php-test",
             "@code-sniffer",
             "@validate-json"
         ],
         "sniff": [
-            "@php-lint",
             "@code-sniffer-autofix",
             "@code-sniffer",
-            "@copy-paste-detector",
             "@mess-detector"
-        ],
-        "docs": [
-            "vendor/sami/sami/sami.php --ansi update sami.cfg.php"
         ],
         "code-sniffer": "phpcs -p -s --extensions=php --standard='PSR1,PSR2' src/ tests/",
         "code-sniffer-autofix": "phpcbf --standard=PSR2 -d tabWidth=4 src/ tests/",
-        "copy-paste-detector": "phpcpd src/ tests/",
-        "mess-detector": "phpmd src,tests text codesize,unusedcode,naming,cleancode,design",
-        "php-lint": "parallel-lint --blame --exclude vendor src/ tests/",
-        "php-lint2": [
-            "find src/ -name '*.php' -print0 | xargs -0 -L 1 php -l",
-            "find tests/ -name '*.php' -print0 | xargs -0 -L 1 php -l"
-        ],
+        "mess-detector": "phpmd src,tests text codesize,unusedcode,naming,design",
         "php-loc": "phploc src",
         "php-test": "phpunit",
         "reports": [
-            "phploc --log-xml ./build/coverage/logs/phploc.xml --progress src || echo",
-            "phpcs -p -s --extensions=php --report=checkstyle --report-file=./build/coverage/logs/checkstyle.xml --standard='PSR1,PSR2' src/ tests/ || echo",
-            "phpcpd --log-pmd ./build/coverage/logs/phpcpd.xml --progress src/ tests/ || echo",
             "phpmd src xml codesize,unusedcode,naming,cleancode,design --reportfile ./build/coverage/logs/phpmd.xml || echo",
-            "phpmd src html codesize,unusedcode,naming,cleancode,design --reportfile ./build/coverage/logs/phpmd.html || echo"
+            "phpmd src html codesize,unusedcode,naming,cleancode,design --reportfile ./build/coverage/logs/phpmd.html || echo",
+            "phploc --log-xml ./build/coverage/logs/phploc.xml src || echo",
+            "phpcs -p -s --extensions=php --report=checkstyle --report-file=./build/coverage/logs/checkstyle.xml --standard='PSR1,PSR2' src/ tests/ || echo"
         ],
         "validate-json": "composer validate --no-check-all --no-check-lock",
         "validate-deps": "composer validate --with-dependencies --strict"
